workspace-sf/force-app/main/default/objects/LUPermissoes__mdt/LUPermissoes__mdt.object-meta.xml
<CustomObject>
    <label>Limpar Usuario Permissoes</label>
    <pluralLabel>LimparUsuario</pluralLabel>
</CustomObject>