workspace-sf/force-app/main/default/objects/LUPermissoes__mdt/fields/Files__c.field-meta.xml
<CustomField>
    <fullName>Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Files</label>
    <type>Checkbox</type>
</CustomField>