workspace-sf/force-app/main/default/objects/LUPermissoes__mdt/fields/Objects__c.field-meta.xml
<CustomField>
    <fullName>Objects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Objects</label>
    <type>Checkbox</type>
</CustomField>