workspace-sf/force-app/main/default/objects/LUPermissoes__mdt/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Period</label>
    <type>Checkbox</type>
</CustomField>